apps/prod/tekton/configs/triggers/ingress-event-listener.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trigger-groups-listener
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "${domain}"
      http:
        paths:
          - pathType: Prefix
            path: "(/|$)(.*)"
            backend:
              service:
                name: el-trigger-groups-listener
                port:
                  name: http-listener
